--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <!-- Site navigation menu -->
 <h1>Loveland School Masking Support</h1>
 
-<a href="testmal@loveland.oh.test?subject=Support for Continued School Masking
-&body=The Tips and Tricks section is great">Send me an email</a>
+<a href="testmal@loveland.oh.test?subject=Support for Continued School Masking&body=The Tips and Tricks section is great" target="_blank" rel="noopener noreferrer">Send me an email</a>
 
 
 </body>
