--- a/index.html
+++ b/index.html
@@ -8,8 +8,90 @@
 
 <!-- Site navigation menu -->
 <h1>Loveland School Masking Support</h1>
+<pre>Please copy-paste the below information into your mail client and send to <b>thisAddress@loveland.test</b> </pre>
 
-<a href="testmal@loveland.oh.test?subject=Support for Continued School Masking&body=The Tips and Tricks section is great" target="_blank" rel="noopener noreferrer">Send me an email</a>
+<h3>Dear Superintendent and School Board Members</h3>
+
+<p>I am writing as a resident of the Loveland City School District to urge you, our
+Superintendent and elected School Board members, to maintain the all staff and
+PreK through 6th grade universal indoor masking requirements, scheduled to
+end January 18, 2021. I am also writing to request that the current universal
+indoor masking requirement be expanded to include students in grades 7 -12.
+This request is being made in consideration of the recent COVID-19 Omicron
+variant case surge, which has been shown to be more transmissible and
+contagious than previous variants.</p><p>
+The Ohio Department of Health, the Ohio Department of Education, the
+American Academy of Pediatrics, the CDC, and locally, the Cincinnati Children’s
+Hospital Medical Center, recently provided clear guidance for universal masking
+in schools and in the community. Universal indoor masking, in addition to
+vaccination and access boosters for those eligible, are strongly recommended as
+the best tools, especially when used in tandem, for mitigating the spread of
+COVID-19 and the current variant.</p><p>
+The pandemic also continues to take a toll on our children’s and educators’
+mental health. Since the pandemic began, rates of psychological distress among
+young people, including anxiety, depression, and other mental health disorders
+have increased substantially. There is much to be done and each of us has a
+part to play. Supporting the mental health of youth will require a community effort
+to address challenges, strengthen the resilience of young people, support their
+families, and mitigate the pandemic’s mental health impact.</p>
+
+<p>As a resident of the Loveland City School District, I am asking that you consider
+the following actions:
+<ol>
+<li>Maintain universal indoor masking for all staff.</li>
+<li>Maintain Universal indoor masking for all students Pre-K through Grade 6.</li>
+<li>universal indoor masking requirements to include students in
+grades 7 - 12.</li>
+<li>Identify a threshold for educator and/or student absence at which the
+district will move forward with a remote learning plan.</li>
+<li>Increase the frequency with which you report to the public student and
+educator absences as well as individuals positive for COVID.</li>
+<li>Create and promote safe, positive, and affirming school environments
+which are inclusive and supportive of student’s social, emotional, and
+cultural needs.</li>
+<li>key administrative, educator, and paraprofessional staff with the
+necessary training to recognize signs of changes in mental and physical
+health among students.</li>
+<li>Mental health gatekeeper training so that staff and peers take
+appropriate action when needed.</li>
+<li>The mental health of all school personnel, including providing
+competitive wages, time off, access to well paid substitute teachers,
+regularly assessing staff well-being, and integrating measures to help
+personnel maintain their own empathy, compassion, and ability to create
+positive environments for students.</li>
+</ol>
+</p>
+<p>
+As superintendent and elected school board members, your roles include
+the evaluation of district operations, interpretations of public health
+policies, and health service delivery. My role as a district resident is to help
+our district leadership identify the areas in need of protection, prioritization,
+and planning to keep Loveland City School District safe and in school:
+Universal Indoor Mask Requirements
+And
+Adequate Mental Health Support for Students and Staff
+Signed,
+
+
+[District Resident Signature]
+Comment:
+[Free Text]
+</p>
+
+<h3>References for Information:</h3>
+https://www.scientificamerican.com/article/omicrons-effect-wont-be-as-mild-as-hoped1/
+https://www.reuters.com/world/us/us-coronavirus-cases-hit-record-high-2021-12-29/
+https://www.kcur.org/news/2021-12-17/kansas-city-hospitals-are-full-again-omicron-has-arrived-and-doctors-are-begging-for-your-help
+https://www.cdc.gov/mmwr/volumes/70/wr/pdfs/mm7046a4-H.pdf
+https://www.the-scientist.com/news-opinion/omicron-propagates-70-times-faster-than-delta-in-bronchi-study-69540
+https://www.med.hku.hk/en/news/press/20211215-omicron-sars-cov-2-infection
+https://edition.cnn.com/2021/12/28/health/chicago-childrens-hospital-surge-doctor-vaccines/index.html
+https://www.hhs.gov/sites/default/files/surgeon-general-youth-mental-health-advisory.pdf
+
+
+
+
+<a href="mailto:testmal@loveland.oh.test?subject=Support for Continued School Masking&body=The Tips and Tricks section is great" target="_blank" rel="noopener noreferrer">Send me an email</a>
 
 
 </body>
