--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!-- Site navigation menu -->
 <h1>Loveland School Masking Support</h1>
 <pre>Please copy-paste the below information into your mail client and send to <b>thisAddress@loveland.test</b> </pre>
+<img src='LovelandSchool.png'>
 
 <h3>Dear Superintendent and School Board Members</h3>
 
