added the headers

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
             width: 855px;
             margin:0 auto;
             text-align: left;
-            }
+        }
+        .HeadFloat{
+            width: 100%;
+        }
+        .Title{
+            width: 50%; 
+        }
+        .Logo{
+            width: 50%; 
+        }
     </style>
   <title>Loveland School Masking Support</title>
 </head>
@@ -14,9 +23,12 @@
 <body>
 
 <!-- Site navigation menu -->
-<h1>Loveland School Masking Support</h1>
+<div class="HeadFloat">
+    <div class="Title"><h1>Loveland School Masking Support</h1></div>
+    <div class="Logo"><img src='LovelandSchool.png'></div>
+</div>
+
 <pre>Please copy-paste the below information into your mail client and send to <b>thisAddress@loveland.test</b> </pre>
-<img src='LovelandSchool.png'>
 
 <div class="MailContent">
 <h3>Dear Superintendent and School Board Members</h3>
