added the headers

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         }
         .Title{
             width: 50%; 
+            float: left;
         }
         .Logo{
             width: 50%; 
+            float: left;
         }
     </style>
   <title>Loveland School Masking Support</title>
