added the headers

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <style>
         .MailContent {
-            width: 855px;
+            max-width: 855px;
             margin:0 auto;
             text-align: left;
+            float: left
         }
         .HeadFloat{
             width: 100%;
+            flost: left
         }
         .Title{
             width: 50%; 
