added the headers

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
             max-width: 855px;
             margin:0 auto;
             text-align: left;
-            float: left
+            float: left;
+            border-style: solid;
+            border-color: black;
+            border-width: 2px;
+            border-radius: 5px;
         }
         .HeadFloat{
             width: 100%;
