added the headers

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             border-color: black;
             border-width: 2px;
             border-radius: 5px;
+            padding: 5px;
         }
         .HeadFloat{
-            width: 100%;
+            max-width: 855px;
             flost: left
         }
         .Title{
@@ -32,10 +33,21 @@
 
 <!-- Site navigation menu -->
 <div class="HeadFloat">
-    <div class="Title"><h1>Loveland School Masking Support</h1></div>
+    <div class="Title"><h2>Loveland School Masking Support</h2></div>
     <div class="Logo"><img src='LovelandSchool.png'></div>
 </div>
 
+<p>Help us protect out children, teachers, and community by performing the following steps.
+    <ol>
+        <li>Open your email client and start a new email by <a href="mailto:testmal@loveland.oh.test?subject=Support for Continued School Masking&body=Paste site contents here" target="_blank" rel="noopener noreferrer">clicking this link.</a>
+        </li>
+        <li>Copy the contents of the below template into the body of your email message.
+        </li>
+        <li>Add your name, comment and additonal supporting comments to the bottom of the message. 
+        </li>
+        <li>Share your voice by hitting send.</li>
+    </ol>
+</p>
 <pre>Please copy-paste the below information into your mail client and send to <b>thisAddress@loveland.test</b> </pre>
 
 <div class="MailContent">
@@ -116,9 +128,6 @@ Comment:<br>
 <a href="https://www.hhs.gov/sites/default/files/surgeon-general-youth-mental-health-advisory.pdf">https://www.hhs.gov/sites/default/files/surgeon-general-youth-mental-health-advisory.pdf</a><br>
 
 </div>
-
-<a href="mailto:testmal@loveland.oh.test?subject=Support for Continued School Masking&body=The Tips and Tricks section is great" target="_blank" rel="noopener noreferrer">Send me an email</a>
-
 
 </body>
 </html>
