added the headers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         .HeadFloat{
             max-width: 855px;
-            flost: left
+            float: left;
         }
         .Title{
             width: 50%; 
@@ -24,6 +24,9 @@
         .Logo{
             width: 50%; 
             float: left;
+        }
+        .Instructions{
+            float: left; 
         }
     </style>
   <title>Loveland School Masking Support</title>
@@ -37,6 +40,7 @@
     <div class="Logo"><img src='LovelandSchool.png'></div>
 </div>
 
+<div class="Instructions">
 <p>Help us protect out children, teachers, and community by performing the following steps.
     <ol>
         <li>Open your email client and start a new email by <a href="mailto:testmal@loveland.oh.test?subject=Support for Continued School Masking&body=Paste site contents here" target="_blank" rel="noopener noreferrer">clicking this link.</a>
@@ -48,7 +52,7 @@
         <li>Share your voice by hitting send.</li>
     </ol>
 </p>
-<pre>Please copy-paste the below information into your mail client and send to <b>thisAddress@loveland.test</b> </pre>
+</div>
 
 <div class="MailContent">
 <h3>Dear Superintendent and School Board Members</h3>
