added the headers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             border-width: 2px;
             border-radius: 8px;
             padding: 5px;
+            position: relative;
         }
         .HeadFloat{
             max-width: 855px;
@@ -25,6 +26,7 @@
             float: left;
         }
         .Instructions{
+            position: relative;
         }
     </style>
   <title>Loveland School Masking Support</title>
@@ -37,7 +39,6 @@
     <div class="Title"><h2>Loveland School Masking Support</h2></div>
     <div class="Logo"><img src='LovelandSchool.png'></div>
 </div>
-<br>
 <div class="Instructions">
 <p>Help us protect out children, teachers, and community by performing the following steps.
     <ol>
@@ -51,7 +52,7 @@
     </ol>
 </p>
 </div>
-<br>
+
 
 <div class="MailContent">
 <h3>Dear Superintendent and School Board Members</h3>
