added the headers

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class="Instructions">
 <p>Help us protect out children, teachers, and community by performing the following steps.
     <ol>
-        <li>Open your email client and start a new email by <a href="mailto:testmal@loveland.oh.test?subject=Support for Continued School Masking&body=Paste site contents here" target="_blank" rel="noopener noreferrer">clicking this link.</a>
+        <li>Open your email client and start a new email by <a href="mailto:board@lovelandschools.org,broadwmi@lovelandschools.org?subject=Support for Continued School Masking&body=Paste site contents here" target="_blank" rel="noopener noreferrer">clicking this link.</a>
         </li>
         <li>Copy the contents of the below template into the body of your email message. 
         </li>
@@ -119,10 +119,9 @@ and planning to keep Loveland City School District safe and in school:
 Universal Indoor Mask Requirements and Adequate Mental Health Support for Students and Staff<br>
 Signed,
 <br>
-<br>
-[District Resident Signature]<br>
+<p contenteditable="true">[Click to Add District Resident Signature]</p>
 Comment:<br>
-[Free Text]<br>
+<p contenteditable="true">[Click to Add Free Text]</p>
 </p>
 
 <h3>References for Information:</h3>
