--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 <div class="Instructions">
 <p>Help us protect out children, teachers, and community by performing the following steps.
     <ol>
+        <li>Read the below letter and add your name and additilal comment to the bottom of the document.</li>
         <li>Open your email client and start a new email by <a href="mailto:board@lovelandschools.org,broadwmi@lovelandschools.org?subject=Support for Continued School Masking&body=Paste site contents here" target="_blank" rel="noopener noreferrer">clicking this link.</a>
+            <li>This will send mail to board@lovelandschools.org and broadwmi@lovelandschools.org</li>
         </li>
-        <li>Copy the contents of the below template into the body of your email message. 
-        </li>
-        <li>Add your name, comment and additonal supporting comments to the bottom of the message. 
+        <li>Copy the contents of the below template into the body of the email message. 
         </li>
         <li>Share your voice by hitting send.</li>
     </ol>
@@ -121,7 +121,7 @@ Signed,
 <br>
 <p contenteditable="true">[Click to Add District Resident Signature]</p>
 Comment:<br>
-<p contenteditable="true">[Click to Add Free Text]</p>
+<p contenteditable="true">[Click to Add additonal Comment]</p>
 </p>
 
 <h3>References for Information:</h3>
