added the headers

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ Universal Indoor Mask Requirements
 <br>
 Signed,
 <br>
-<p contenteditable="true">[Click to Add District Resident Signature]</p>
+<p contenteditable="true">[Double Click to Add District Resident Signature]</p>
 Comment:<br>
-<p contenteditable="true">[Click to Add additonal Comment]</p>
+<p contenteditable="true">[Double Click to Add Additional Comment]</p>
 </p>
 
 <h3>References for Information:</h3>
