added the headers

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ The Ohio Department of Health, the Ohio Department of Education, the
 American Academy of Pediatrics, the CDC, and locally, the Cincinnati Children’s
 Hospital Medical Center, recently provided clear guidance for universal masking
 in schools and in the community. Universal indoor masking, in addition to
-vaccination and access boosters for those eligible, are strongly recommended as
+vaccination and boosters for those eligible, are strongly recommended as
 the best tools, especially when used in tandem, for mitigating the spread of
 COVID-19 and the current variant.
 </p><p>
